[package]
name = "rust_sfq"
version = "1.0.1-beta"
edition = "2024"
authors = ["Mebuki Oishi <mebuki@is.s.u-tokyo.ac.jp>"]
description = "DSL for designing SFQ circuits in Rust."
license = "MIT"
repository = "https://github.com/Mebuki-mebuki/rust_sfq"
keywords = ["sfq", "dsl", "circuit"]
categories = ["science", "embedded"]
include = [
    "src/**",
    "Cargo.toml",
    "README.md",
    "CHANGELOG",
    "LICENSE",
]

[dependencies]
twox-hash = "2.1.0"
colored = "3.0.0"
